# card-wallet

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  schema.sql
backend/app/: main.py
backend/app/enumerators/: enums.py
backend/app/logic/: giftcard.py  user.py
backend/app/model/: base.py  converter.py  file.py  gift_card.py  user.py  wrapper.py
backend/app/router/: giftcard.py  user.py
backend/app/utility/: create_db.py  currency.py  dates.py  db.py
backend/tests/: conftest.py  test_crud.py  test_giftcards.py  test_users.py  test_utils.py
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/card_wallet_fe/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/components/: gift_card.dart  home.dart
frontend/lib/l10n/: app_en.arb  app_it.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_it.dart
frontend/lib/pages/: giftcards.dart  settings.dart  upload.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
